--- a/MyDay/app/build.gradle
+++ b/MyDay/app/build.gradle
@@ -5,7 +5,8 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.example.myday"
-        minSdkVersion 21
+        //DATE 버전땜시 버전 바꾸기 전에 상태에서 지금 API 21에서 26으로 바꿈
+        minSdkVersion 26
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -27,6 +28,10 @@ android {
         exclude 'META-INF/ASL2.0'
         exclude 'build.xml'
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
@@ -34,8 +39,9 @@ dependencies {
     //implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.google.firebase:firebase-storage:18.0.0'
-    implementation 'com.google.firebase:firebase-auth:17.0.0'
+    implementation 'com.google.firebase:firebase-storage:19.1.0'
+    implementation 'com.firebaseui:firebase-ui-storage:3.2.2'
+    implementation 'com.google.firebase:firebase-auth:19.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
@@ -49,4 +55,17 @@ dependencies {
     implementation files('libs/commons-codec-1.10.jar')
     implementation files('libs/local_policy.jar')
 
+    //weather
+    implementation 'com.github.androdocs:Simple-HTTP-Request:v1.0'
+
+    // glide
+    implementation 'com.github.bumptech.glide:glide:4.6.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
+
+
+    //버터나이프
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    implementation 'com.jakewharton:butterknife:10.0.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
 }
